--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,61 @@
 .btn {
-    padding: 24px;
-    border-radius: 50%;
-    background: green;
-    color: #FFF;
+    display: inline-block;
+    border-radius: 2px;
+    line-height: normal;
+    white-space: nowrap;
+    text-align: center;
+    cursor: pointer;
+    padding: 6px 12px 8px;
+    color: #fff;
+    border: 1px solid rgba(0,0,0,.1);
+    background-color: #27ae60;
+    text-decoration: none;
+    font-weight: 400 !important;
+    font-family: Lato,proxima-nova,Helvetica Neue,Arial,sans-serif;
+    box-shadow: inset 0 1px 2px -1px hsl(0deg 0% 100% / 50%), inset 0 -2px 0 0 rgb(0 0 0 / 10%);
+    vertical-align: middle;
 }
 
+
+
+
 #divExtension {
-    position: absolute;
-    bottom: 12px;
-    right: 12px;
+    width: 150px;
+    position: fixed;
+    top: 133px;
+    right: -1000px;
     z-index: 999;
     background-color: blue;
-
     display: flex;
     flex-direction: column;
+}
+
+#btnExibir {
+    position: fixed;
+    top: 133px;
+    right: 0px;
+    height: 42px;
+    width: 42px;
+    z-index: 999;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ativo {
+    background-color: green !important;
+    transition: 0.5s;
+    right: 0px !important;
+}
+
+.btnAtivo {
+    right: 150px !important;
+    transform: rotate(180deg);
+    transition: 0.5s;
+}
+
+#imgID{
+    height: 32px;
+    width: 32px;
 }
